# Math

./: Box.cpp  Box.h  CMakeLists.txt  Cone.h  Constants.h  Determinant.h  Doxyfile  Doxyfile.in  FastMath.h  FastMath.inl  FixedPoint.cpp  FixedPoint.h  Frustum.cpp  Intersectable.cpp  Line.cpp  Line.h  Line.inl  Math.cpp  Math.h  Matrix22.cpp  Matrix22.h  Matrix22.inl  Matrix22d.cpp  Matrix22d.h  Matrix22d.inl  Matrix33.cpp  Matrix33.h  Matrix33.inl  Matrix33d.cpp  Matrix33d.h  Matrix33d.inl  Matrix43.cpp  Matrix43.h  Matrix43.inl  Matrix43d.cpp  Matrix43d.h  Matrix43d.inl  Matrix44.cpp  Matrix44.h  Matrix44.inl  (+37 more)
include/MyMath/: Box.h  Cone.h  Constants.h  Determinant.h  FastMath.h  FixedPoint.h  Frustum.h  Intersectable.h  Line.h  Matrix22.h  Matrix22d.h  Matrix33.h  Matrix33d.h  Matrix43.h  Matrix43d.h  Matrix44.h  Matrix44d.h  MyMath.h  Plane.h  Point.h  Probability.h  Quaternion.h  Range.h  Sphere.h  Vector2.h  Vector2d.h  Vector2i.h  Vector3.h  Vector3d.h  Vector3i.h  Vector4.h  Vector4d.h
unit-test/: MathTest.cpp  MathTest.h  Test.cpp
